--- a/mi-aplicacion/src/pages/Sell/Sell.css
+++ b/mi-aplicacion/src/pages/Sell/Sell.css
@@ -1,5 +1,6 @@
 .sell-wrapper {
     padding-top: 0rem;
+    /* background-color: var(--sand-color); */
 }
 
 .sell-page-background {
@@ -11,6 +12,7 @@
     background-color: transparent;
     background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url('/images/salon3.jpg');
     background-size: cover;
+    /* background-color: var(--sand-color); */
     background-position: center 65%;
     width: 100%;
     height: 50vh;
