cambios de tamaño de letra en movil

--- a/mi-aplicacion/src/pages/LandingPage/components/InmoLocation.css
+++ b/mi-aplicacion/src/pages/LandingPage/components/InmoLocation.css
@@ -237,6 +237,7 @@
         padding-top: 1.5rem;
         font-size: 0.9rem;
         margin-bottom: 0rem;
+        width: 95%;
     }
 
     /* Animaciones más rápidas para teléfonos muy pequeños */
