--- a/mi-aplicacion/src/components/Curtain/Curtain.css
+++ b/mi-aplicacion/src/components/Curtain/Curtain.css
@@ -3,7 +3,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100vh;
+    height: 100dvh;
     background-color: var(--corporative-color); 
     display: flex;
     justify-content: center;
