--- a/mi-aplicacion/src/pages/LandingPage/components/PropertiesLand.css
+++ b/mi-aplicacion/src/pages/LandingPage/components/PropertiesLand.css
@@ -223,6 +223,7 @@
         margin-bottom: 2rem;
         border-top: 1px solid var(--corporative-color);
         padding-top: 3rem;
+        width: 95%;
     }
 
     .propertiesland-left img {
