cambio de tamaño letra

--- a/mi-aplicacion/src/pages/IndividualHome/Components/PropertyHeader.css
+++ b/mi-aplicacion/src/pages/IndividualHome/Components/PropertyHeader.css
@@ -137,6 +137,10 @@
     .individual-home-maininfo h3 {
       font-size: 1.1rem;
     }
+
+    .individual-home-maininfo .sold-indicator {
+      font-size: 1.1rem;
+    }
     
     /* 
     .navigation-buttons {
