--- a/mi-aplicacion/src/index.css
+++ b/mi-aplicacion/src/index.css
@@ -23,7 +23,8 @@ html, body {
 
 * {
   box-sizing: border-box;
-  font-family: 'Scto Grotesk A', Helvetica, Arial, sans-serif;
+  /* font-family: 'Scto Grotesk A', Helvetica, Arial, sans-serif; */
+  font-family: 'WorkSansEL';
   /* background-color: var(--light-color); */
 }
 
@@ -61,9 +62,15 @@ body {
   --darksand-color: #A59E8C;
   --prueba-color: #88979D;
   --or-color: #AB976E;
+  --grey-color: #DAD4D1;
 
 
   --main-font: 'Scto Grotesk A', Helvetica, Arial, sans-serif;
-  --serif-one-font: 'Artaza-regular', serif;
+  /* --serif-one-font: 'Artaza-regular', serif; */
+  /* --serif-one-font: 'Playfair', serif; */
+  --serif-one-font: 'Playfair', serif;
   --serif-second-font: Georgia, 'Times New Roman', Times, serif;
+  --sans-serif-2: 'WorkSans';
+
+  /* --serif-one-font: 'Artaza-regular', serif; */
 }
