--- a/mi-aplicacion/src/pages/LandingPage/components/BuyHomes.css
+++ b/mi-aplicacion/src/pages/LandingPage/components/BuyHomes.css
@@ -1,16 +1,19 @@
 .buyhomes-wrapper {
-    padding: 0 1.5rem;
+    /* padding: 0 1.5rem; */
     background-color: var(--light-color);
     display: flex;
     height: 100vh;
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    margin-left: 3rem;
+    margin-right: 3rem;
+    border-top: 1px solid var(--grey-color);
 }
 
 .buyhomes-container {
     background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.4)), url('/images/salon.jpg');
-    border-radius: 20% 20% 20% 20% / 50% 50% 50% 50%;
+    /* border-radius: 20% 20% 20% 20% / 50% 50% 50% 50%; */
     overflow: hidden;
     background-size: cover;
     background-position: center 70%;
@@ -46,10 +49,14 @@
 }
 
 .buyhomes-container h1 {
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    /* font-family: Georgia, 'Times New Roman', Times, serif;
     font-weight: 100;
-    font-size: 3.5rem;
+    font-size: 3.5rem; */
     text-align: center;
+
+    font-size: 3rem;
+    font-weight: 100;
+    font-family: var(--serif-one-font);
 
     opacity: 0;
 }
