--- a/mi-aplicacion/src/pages/LandingPage/components/CarouselLocation.css
+++ b/mi-aplicacion/src/pages/LandingPage/components/CarouselLocation.css
@@ -69,8 +69,8 @@
 .carousel-button {
   width: 30px;
   height: 30px;
-  background-color: transparent;
-  border: 1px solid var(--dark-color);
+  background-color: var(--corporative-color);
+  border: 1px solid var(--light-color);
   border-radius: 50%;
   display: flex;
   justify-content: center;
@@ -80,8 +80,8 @@
 }
 
 .carousel-button svg {
-  fill: var(--dark-color);
-  color: var(--dark-color);
+  fill: var(--light-color);
+  color: var(--light-color);
   width: 18px;
     height: 18px;
 }
@@ -104,14 +104,15 @@
 }
 
 .carousel-location h3 {
-  font-size: 2rem;
+  font-size: 1.8rem;
   font-weight: 100;
-  font-family: Georgia, 'Times New Roman', Times, serif;
-      /* font-family: 'Baskerville'; */
+  /* font-family: Georgia, 'Times New Roman', Times, serif; */
+  /* font-family: 'Baskerville'; */
+  font-family: var(--serif-one-font);
   margin-bottom: 1.4rem;
   padding-bottom: 1.5rem;
-  border-bottom: 2px solid var(--dark-color);
-  color: var(--dark-color);
+  border-bottom: 1px solid var(--grey-color);
+  color: var(--corporative-color);
 }
 
 
