--- a/mi-aplicacion/src/pages/LandingPage/components/InmoLocation.css
+++ b/mi-aplicacion/src/pages/LandingPage/components/InmoLocation.css
@@ -17,7 +17,7 @@
     display: flex;
     flex-direction: row;
     gap: 2rem;
-    border-top: 2px solid var(--dark-color);
+    border-top: 1px solid var(--grey-color);
     padding-bottom: 5rem;
 }
 
@@ -54,11 +54,12 @@
 }
 
 .inmolocation-left h1 {
-    font-size: 3.5rem;
+    font-size: 2.5rem;
     font-weight: 100;
-    color: var(--dark-color);
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    color: var(--corporative-color);
+    /* font-family: Georgia, 'Times New Roman', Times, serif; */
     /* font-family: 'Baskerville'; */
+    font-family: var(--serif-one-font);
     text-transform: uppercase;
 }
 
@@ -68,6 +69,7 @@
     width: 70%;
     line-height: 1.5rem;
     margin-bottom: 3rem;
+    color: var(--corporative-color);
 }
 
 @keyframes fadeIn {
