--- a/mi-aplicacion/src/pages/Properties/components/PropertyCart.css
+++ b/mi-aplicacion/src/pages/Properties/components/PropertyCart.css
@@ -1,12 +1,17 @@
 .property-card {
     background-color: transparent;
     overflow: hidden;
-    border: 0.5px solid var(--dark-color);
-    padding: 1rem;
+    /* border: 0.5px solid var(--grey-color); */
+    /* border-right: 0.5px solid var(--grey-color);
+    border-bottom: 0.5px solid var(--grey-color); */
+    padding: 0.2rem;
+    /* margin: 1rem; */
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
     height: 100%;
+    /* border-right: 1px solid red; */
+    border: 0.2px solid var(--grey-color);
 }
 
 .property-card__image-container {
@@ -43,18 +48,22 @@
     height: 100%;
     background-color: var(--light-transparent-color);
     display: flex;
-    align-items: center;
+    align-items: flex-end;
     justify-content: center;
+    padding: 1rem;
     opacity: 0;
     transition: opacity 0.5s ease;
 }
 
 .property-card__view-details {
-    color: var(--dark-color);
+    color: var(--corporative-color);
     font-size: 1rem;
     font-weight: 500;
     letter-spacing: 1px;
     padding: 10px 20px;
+    background-color: var(--light-color);
+    font-family: var(--serif-one-font);
+    border-radius: 25px;
 }
 
 .property-card:hover .property-card__overlay {
@@ -96,6 +105,7 @@
     letter-spacing: 0.8px;
     white-space: nowrap;
     flex-shrink: 0;
+    font-family: var(--serif-one-font);
 }
 
 .property-card__sold-indicator::before {
@@ -117,6 +127,7 @@
     letter-spacing: 0.8px;
     white-space: nowrap;
     flex-shrink: 0;
+    font-family: var(--serif-one-font);
 }
 
 /* .property-card__price-indicator::before {
@@ -140,6 +151,8 @@
     overflow: hidden;
     text-overflow: ellipsis;
     max-width: 80%;
+    font-family: var(--serif-one-font);
+
 }
 
 .property-card__features {
@@ -155,7 +168,7 @@
 }
 
 .property-card__features .separator-features {
-    color: var(--nude-color);
+    color: var(--grey-color);
 }
 
 
