--- a/mi-aplicacion/src/pages/Buy/components/BuyForm.css
+++ b/mi-aplicacion/src/pages/Buy/components/BuyForm.css
@@ -179,16 +179,15 @@ select,
 textarea {
   width: 100%;
   padding: 0.8rem;
-  /* border: 1px solid var(--dark-color); */
-  border: 1px solid transparent;
+  /* border: 1px solid var(--nude-color); */
+  border: 1px solid var(--grey-color);
   border-radius: 0px;
   font-size: 1rem;
   transition: border-color 0.2s;
   /* background-color: transparent; */
-  transition: border-color 0.2s;
-  background-color: var(--nude-color);
-  opacity: 0.6;
+  background-color: transparent; 
   color: var(--dark-color);
+  opacity: 0.6;
   font-weight: 100;
 }
 
@@ -307,7 +306,7 @@ label {
 }
 
 .submit-button {
-  background-color: var(--prueba-color);
+  background-color: var(--corporative-transparent-color);
   color: white;
   border: none;
   padding: 1rem 2rem;
@@ -384,7 +383,7 @@ label {
 .form-progress-bar {
   width: 100%;
   height: 2px;
-  background-color: var(--sand-color);
+  background-color: var(--grey-color);
   position: relative;
   overflow: hidden;
 }
