--- a/mi-aplicacion/src/pages/IndividualHome/Components/InfoProperty2.css
+++ b/mi-aplicacion/src/pages/IndividualHome/Components/InfoProperty2.css
@@ -1,199 +1,7 @@
-/* .total-info-wrapper {
-    display: flex;
-    flex-direction: row;
-    background-color: var(--sand-color);
-    padding-top: 2rem;
-    padding-bottom: 2rem;
-    border-top: 1px solid var(--corporative-color);
-    border-bottom: 1px solid var(--corporative-color);
-}
-
-.title-info {
-    flex: 0.2;
-    display: flex;
-    padding-left: 8.5rem;
-
-}
-
-.title-info h1 {
-    color: var(--dark-color);
-    text-transform: uppercase;
-    margin-bottom: 3rem;
-
-}
-
-.title-info h1 .first-line {
-    font-size: 1.8rem;
-    font-weight: 100;
-
-
-}
-
-.title-info h1 .second-line {
-    font-size: 2rem;
-    font-weight: 600;
-    font-family: var(--serif-one-font);
-
-
-}
-
-
-
-.info-right {
-    flex: 0.8;
-    display: flex;
-    flex-direction: column;
-
-    padding-right: 8.5rem;
-    padding-left: 5rem;
-    padding-top: 2rem;
-}
-
-
-
-.intro {
-    display: flex;
-    flex-direction: row;
-}
-
-.general-info {
-    flex: 0.3;
-    display: flex;
-    flex-direction: column;
-    border-bottom: 1px solid rgba(128, 128, 128, 0.239);
-    padding-bottom: 2rem;
-}
-
-.general-list h5 {
-    text-transform: uppercase;
-    font-weight: 100;
-    opacity: 0.7;
-    color: var(--dark-color);
-    letter-spacing: 1px;
-    font-size: 0.75rem;
-}
-
-.list-1 {
-    border-bottom: 1px solid rgba(128, 128, 128, 0.239);
-}
-
-.list-1:first-child {
-    border-top: 1px solid rgba(128, 128, 128, 0.239);
-}
-
-.list-1 p {
-    font-size: 1.2rem;
-    font-weight: 300;
-    color: var(--dark-color);
-}
-
-.column-description {
-    flex: 0.7;
-    display: flex;
-    border-bottom: 1px solid rgba(128, 128, 128, 0.239);
-    padding-bottom: 2rem;
-}
-
-.column-description h1 {
-    padding-left: 6rem;
-    margin-top: 0;
-    font-size: 1.3rem;
-    font-weight: 200;
-    width: 100%;
-    line-height: 2rem;
-    color: var(--dark-color);
-    column-count: 2;
-    column-gap: 4rem;
-}
-
-.individual-home-totalinfo {
-    display: flex;
-    flex-direction: column;
-    padding-top: 1rem;
-}
-
-.caracteristicas-info {
-    display: flex;
-    flex-direction: column;
-    gap: 2rem;
-}
-
-.caracteristicas-list {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    gap: 1rem;
-    border-bottom: 1px solid rgba(128, 128, 128, 0.239);
-    padding-bottom: 2rem;
-}
-
-.list-1-c p {
-    font-size: 1.2rem;
-    font-weight: 300;
-    color: var(--dark-color);
-}
-
-.caracteristicas-list h5 {
-    text-transform: uppercase;
-    font-weight: 100;
-    opacity: 0.7;
-    color: var(--dark-color);
-    letter-spacing: 1px;
-    font-size: 0.75rem;
-}
-
-.caracteristicas-info h3,
-.column-extras h3 {
-    text-transform: uppercase;
-    font-weight: 600;
-    color: var(--dark-color);
-    letter-spacing: 1px;
-    font-size: 0.75rem;
-}
-
-.column-extras {
-    display: flex;
-    flex-direction: column;
-    padding-top: 1rem;
-    gap: 2rem;
-
-}
-
-.extras-list {
-    display: grid;
-    grid-template-columns: repeat(6, 1fr);
-    gap: 4rem;
-    row-gap: 3rem;
-    padding: 0;
-    list-style-type: none;
-    width: 100%;
-    box-sizing: border-box;
-    padding-bottom: 2rem;
-}
-
-.extras-list li {
-    min-width: 0;
-    padding: 0px;
-    text-align: left;
-    color: var(--dark-color);
-    opacity: 0.7;
-    padding-left: 1.5em;
-    position: relative;
-}
-
-.extras-list li::before {
-    content: "✓";
-    position: absolute;
-    left: 0;
-    color: var(--corporative-color);
-    font-weight: bold;
-} */
-
 .total-info-wrapper {
     display: flex;
     flex-direction: row;
-    background-color: var(--sand-color);
+    background-color: var(--taupe-light-color);
     padding-top: 2rem;
     padding-bottom: 2rem;
     border-top: 1px solid var(--corporative-color);
@@ -207,7 +15,7 @@
 }
 
 .title-info h1 {
-    color: var(--dark-color);
+    color: var(--corporative-color);
     text-transform: uppercase;
     margin-bottom: 3rem;
 }
@@ -241,7 +49,7 @@
     flex: 0.3;
     display: flex;
     flex-direction: column;
-    border-bottom: 1px solid rgba(128, 128, 128, 0.239);
+    border-bottom: 1px solid var(--grey-color);
     padding-bottom: 2rem;
 }
 
@@ -255,17 +63,17 @@
 }
 
 .list-1 {
-    border-bottom: 1px solid rgba(128, 128, 128, 0.239);
+    border-bottom: 1px solid var(--grey-color);
 }
 
 .list-1:first-child {
-    border-top: 1px solid rgba(128, 128, 128, 0.239);
+    border-top: 1px solid var(--grey-color);
 }
 
 .list-1 p {
     font-size: 1.3rem;
     font-weight: 100;
-    color: var(--dark-color);
+    color: var(--corporative-color);
     /* font-family: var(--serif-one-font); */
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
@@ -273,7 +81,7 @@
 .column-description {
     flex: 0.7;
     display: flex;
-    border-bottom: 1px solid rgba(128, 128, 128, 0.239);
+    border-bottom: 1px solid var(--grey-color);
     padding-bottom: 2rem;
 }
 
@@ -284,7 +92,7 @@
     font-weight: 200;
     width: 100%;
     line-height: 2rem;
-    color: var(--dark-color);
+    color: var(--corporative-color);
     column-count: 2;
     column-gap: 4rem;
 }
@@ -309,7 +117,7 @@
     transition: all 0.3s ease;
     padding-top: 1rem;
     padding-bottom: 2rem;
-    border-bottom: 1px solid rgba(128, 128, 128, 0.239);
+    border-bottom: 1px solid var(--grey-color);
 }
 /* Quitar el borde inferior cuando la sección está expandida */
 .section-header.expanded {
@@ -361,20 +169,20 @@
     flex-wrap: wrap;
     justify-content: space-between;
     gap: 1rem;
-    border-bottom: 1px solid rgba(128, 128, 128, 0.239);
+    border-bottom: 1px solid var(--grey-color);
 }
 
 .list-1-c p {
     font-size: 1.2rem;
     font-weight: 300;
-    color: var(--dark-color);
+    color: var(--corporative-color);
 }
 
 .caracteristicas-list h5 {
     text-transform: uppercase;
     font-weight: 100;
     opacity: 0.7;
-    color: var(--dark-color);
+    color: var(--corporative-color);
     letter-spacing: 1px;
     font-size: 0.75rem;
 }
@@ -383,7 +191,7 @@
 .column-extras h3 {
     /* text-transform: uppercase; */
     font-weight: 600;
-    color: var(--dark-color);
+    color: var(--corporative-color);
     letter-spacing: 1px;
     font-size: 1.5rem;
     font-family: var(--serif-one-font);
@@ -408,14 +216,14 @@
 }
 
 .extras-list.expanded {
-    border-bottom: 1px solid rgba(128, 128, 128, 0.239);
+    border-bottom: 1px solid var(--grey-color);
 }
 
 .extras-list li {
     min-width: 0;
     padding: 0px;
     text-align: left;
-    color: var(--dark-color);
+    color: var(--corporative-color);
     opacity: 0.7;
     padding-left: 1.5em;
     position: relative;
