--- a/mi-aplicacion/src/pages/LandingPage/components/Glimpse.css
+++ b/mi-aplicacion/src/pages/LandingPage/components/Glimpse.css
@@ -2,7 +2,8 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 85vh;
+    height: 100vh;
+
     background-color: var(--nude-color);
     padding: 0rem;
 }
@@ -33,38 +34,47 @@
 
 /* Panel de texto que se desplaza */
 .intro-content {
-    flex: 0 0 630px; /* Ancho fijo de 560px, no se encoge ni crece */
-    min-width: 630px; /* Asegurar el ancho mínimo */
+    flex: 0 0 50%; /* Ocupa exactamente el 50% del espacio disponible */
+    min-width: 50%;
     height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     padding: 4rem;
-    background-color: var(--taupe-color, #b8aa8e);
+    background-color: var(--corporative-color, #b8aa8e);
     color: white;
 }
 
-.intro-content h1 {
-    display: none; /* Oculto porque no se muestra en la imagen de referencia */
+.intro-content-one {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
-
-.intro-content h2 {
-    font-size: 4rem;
+.intro-content-one h2 {
+    font-size: 3rem;
     font-weight: 300;
     margin: 0;
 }
 
-.intro-content h3 {
-    font-size: 3.5rem;
+.intro-content-one h3 {
+    font-size: 3rem;
     font-weight: 300;
     margin: 1rem 0 0 0;
 }
 
 .footer-text {
-    font-family: var(--serif-one-font, 'Playfair', serif);
-    font-size: 3rem;
-    font-weight: 300;
+    /* font-family: var(--serif-one-font, 'Playfair', serif); */
+    /* font-size: 3rem;
+    font-weight: 300; */
     margin-top: auto;
+    text-align: right;
+
+    text-transform: uppercase;
+
+    font-size: 2.5rem;
+    font-weight: 100;
+    /* color: var(--corporative-color); */
+    font-family: var(--serif-one-font);
 }
 
 /* Imágenes en el carrusel */
@@ -83,7 +93,8 @@
     z-index: 10;
     width: 50px;
     height: 50px;
-    background-color: rgba(184, 170, 142, 0.8);
+    /* background-color: rgba(184, 170, 142, 0.8); */
+    background-color: var(--corporative-transparent-color);
     border: none;
     border-radius: 50px;
     display: flex;
@@ -96,7 +107,7 @@
 }
 
 .scroll-arrow:hover {
-    background-color: rgba(184, 170, 142, 1);
+    background-color: var(--corporative-color);
 }
 
 .left-arrow {
