--- a/mi-aplicacion/src/pages/LandingPage/components/PropertiesLand.css
+++ b/mi-aplicacion/src/pages/LandingPage/components/PropertiesLand.css
@@ -1,7 +1,8 @@
 .section-propertiesland {
     width: 100%;
     height: auto;
-    padding-top: 8rem;
+    padding-top: 2.5rem;
+    /* margin-bottom: 3rm; */
     display: flex;
     flex-direction: column;
     background-color: var(--light-color);
@@ -11,14 +12,16 @@
     margin-left: 3rem;
     margin-right: 3rem;
     margin-top: 0rem;
-    margin-bottom: 0rem;
+    margin-bottom: 2.5rem;
     padding-top: 2.5rem;
     padding-bottom: 2.5rem;
     display: flex;
     flex-direction: row;
-    gap: 2rem;
+    gap: 0rem;
     border-top: 1px solid var(--grey-color);
-    padding-bottom: 5rem;
+    border-bottom: 1px solid var(--grey-color);
+
+    /* padding-bottom: 5rem; */
 }
 
 /*left*/
@@ -34,8 +37,9 @@
     width: 100%;
     height: auto;
     object-fit: cover;
-    max-width: 580px;
+    /* max-width: 580px; */
     opacity: 0;
+    aspect-ratio: 1 / 1;
 }
 
 .section-propertiesland.visible .propertiesland-left img {
@@ -108,11 +112,11 @@
 }
 
 .propertiesland-right h3 {
-    font-size: 1.1rem;
+    font-size: 1rem;
     font-weight: 100;
-    width: 70%;
+    width: 60%;
     line-height: 1.5rem;
-    margin-bottom: 3rem;
+    margin-bottom: 0rem;
     color: var(--corporative-color);
 }
 
@@ -234,7 +238,7 @@
 
     .propertiesland-left img {
         max-width: 100%;
-        aspect-ratio: 4/3;
+        aspect-ratio: 1/1;
         /* Proporción 4:3 para la imagen */
         object-fit: cover;
         margin-top: 3rem;
