--- a/mi-aplicacion/src/pages/Sell/Sell.css
+++ b/mi-aplicacion/src/pages/Sell/Sell.css
@@ -10,10 +10,11 @@
     margin-bottom: 0rem;
     text-align: center;
     background-color: transparent;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url('/images/salon3.jpg');
+    /* background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url('/images/glimpse/7.webp'); */
+    background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.4)), url('/images/salon.jpg');
     background-size: cover;
     /* background-color: var(--sand-color); */
-    background-position: center 65%;
+    background-position: center 60%;
     width: 100%;
     height: 50vh;
     justify-content: center;
