--- a/mi-aplicacion/src/pages/Sell/components/SellForm.css
+++ b/mi-aplicacion/src/pages/Sell/components/SellForm.css
@@ -76,12 +76,12 @@ textarea {
   width: 100%;
   padding: 0.8rem;
   /* border: 1px solid var(--nude-color); */
-  border: 1px solid transparent;
+  border: 1px solid var(--grey-color);
   border-radius: 0px;
   font-size: 1rem;
   transition: border-color 0.2s;
   /* background-color: transparent; */
-  background-color: var(--sand-color); 
+  background-color: transparent; 
   color: var(--dark-color);
   opacity: 0.6;
   font-weight: 100;
@@ -91,7 +91,7 @@ input:focus,
 select:focus,
 textarea:focus {
   outline: none;
-  border-bottom: 1px solid var(--corporative-color);
+  border: 1px solid var(--corporative-color);
 }
 
 /* input[type="text"],
@@ -199,7 +199,7 @@ textarea:focus {
 }
 
 .sell-form-container .submit-button {
-  background-color: var(--prueba-color);
+  background-color: var(--corporative-transparent-color);
   color: white;
   border: none;
   padding: 1rem 2rem;
@@ -211,6 +211,10 @@ textarea:focus {
   cursor: pointer;
   transition: background-color 0.2s;
   margin-top: 1rem;
+
+  /* display: block;
+    margin-left: auto;
+    margin-right: auto; */
 }
 
 .sell-form-container .submit-button:hover {
