--- a/mi-aplicacion/src/pages/LandingPage/components/CarouselLocation.css
+++ b/mi-aplicacion/src/pages/LandingPage/components/CarouselLocation.css
@@ -5,8 +5,13 @@
   overflow: visible;
   background-color: var(--light-color);
   /* background-color: #A59E8C; */
-  padding-bottom: 5rem;
-  padding-top: 1rem;
+  padding-bottom: 8rem;
+  padding-top: 4rem;
+  
+  /* border-top: 1px solid var(--grey-color);
+  margin-left: 3rem;
+    margin-right: 3rem; */
+
 }
 
 .carousel-wrapper {
@@ -58,10 +63,10 @@
   justify-content: right;
   align-items: center;
   gap: 20px;
-  margin-top: 23px;
+  margin-top: 0px;
   position: absolute;
   margin-right: 3rem;
-  top: 2rem;
+  top: 8rem;
   left: 0;
   right: 0;
 }
@@ -101,18 +106,21 @@
 
 .carousel-location {
   padding: 0rem 3rem;
+  /* padding-right: 3rem;
+  margin-right: 3rem; */
 }
 
 .carousel-location h3 {
-  font-size: 1.8rem;
+  font-size: 2.5rem;
   font-weight: 100;
   /* font-family: Georgia, 'Times New Roman', Times, serif; */
   /* font-family: 'Baskerville'; */
   font-family: var(--serif-one-font);
-  margin-bottom: 1.4rem;
-  padding-bottom: 1.5rem;
+  margin-bottom: 2rem;
+  padding-bottom: 0.5rem;
   border-bottom: 1px solid var(--grey-color);
   color: var(--corporative-color);
+  text-transform: uppercase;
 }
 
 
@@ -312,6 +320,7 @@
 
   .carousel-location h3 {
     font-size: 1.4rem;
+    border-bottom: none;
   }
 
   .carousel-navigation {
