--- a/mi-aplicacion/src/components/Header/HeaderPhone2.css
+++ b/mi-aplicacion/src/components/Header/HeaderPhone2.css
@@ -96,7 +96,7 @@
     width: 100%;
     height: 100dvh;
     background-color: var(--corporative-color);
-    padding-top: 175px;
+    padding-top: 100px;
     z-index: 1100;
     overflow-y: auto;
     opacity: 0;
@@ -105,6 +105,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    /* padding-left: 1rem; */
 }
 
 .nav-phone-menu.show {
@@ -151,7 +153,7 @@
 .nav-phone-link {
     text-decoration: none;
     color: var(--light-color);
-    font-size: 1rem;
+    font-size: 1.2rem;
     font-weight: 100;
     transition: color 0.3s;
     display: block;
@@ -159,8 +161,8 @@
 }
 
 .nav-phone-text {
-    text-align: center;
-    font-family: var(--serif-one-font);
+    text-align: left;
+    /* font-family: var(--serif-one-font); */
 }
 
 .nav-phone-link:hover {
