--- a/mi-aplicacion/src/pages/LandingPage/components/CarouselEdition.css
+++ b/mi-aplicacion/src/pages/LandingPage/components/CarouselEdition.css
@@ -36,26 +36,27 @@
     width: 100%;
     height: auto;
     object-fit: cover;
-    /* aspect-ratio: 1 / 1; */
 }
 
 .section-carousel-right {
     flex: 1;
     display: flex;
     flex-direction: column;
-    /* justify-content: center;
-    align-items: center;
-    text-align: center; */
-}
-.photo-little {
-    flex: 1;
-    display: flex;
-    /* align-items: right; */
-    align-items: flex-start;
-    justify-content: right;
+    background-color: var(--corporative-color);
 
-    position: relative; /* Agregamos posición relativa */
-    overflow: visible; 
+    position: relative; 
+}
+
+.section-carousel-right .top-line {
+    top: 2rem;
+    height: 150px; /* Ajusta según el espacio disponible arriba */
+    opacity: 0.5;
+}
+
+.section-carousel-right .bottom-line {
+    bottom: 2rem;
+    height: 150px; /* Ajusta según el espacio disponible abajo */
+    opacity: 0.5;
 }
 
 .photo-little img {
@@ -64,19 +65,27 @@
     margin-top: -50px; 
 }
 .texts {
-    flex: 1;
+    /* flex: 1;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
     align-items: left;
     text-align: left;
+    padding-left: 3rem; */
+
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
     padding-left: 3rem;
 
 }
 .texts h1 {
     font-size: 2.5rem;
     font-weight: 100;
-    color: var(--corporative-color);
+    color: var(--light-color);
     font-family: var(--serif-one-font);
     text-transform: uppercase;
 }
@@ -87,7 +96,7 @@
     width: 60%;
     line-height: 1.5rem;
     margin-bottom: 3rem;
-    color: var(--corporative-color);
+    color: var(--light-color);
 }
 
 .texts h4 {
@@ -97,6 +106,7 @@
     line-height: 1.5rem;
     margin-bottom: 3rem;
     font-family: var(--serif-one-font);
-    color: var(--corporative-color);
+    color: var(--light-color);
     margin-bottom: 0;
 }
+
