--- a/mi-aplicacion/src/pages/IndividualHome/Components/PropertyHeader.css
+++ b/mi-aplicacion/src/pages/IndividualHome/Components/PropertyHeader.css
@@ -5,7 +5,7 @@
     align-items: center;
     margin-left: 8.5rem;
     margin-right: 8.5rem;
-    border-bottom: 1px solid var(--dark-color);
+    border-bottom: 1px solid var(--grey-color);
     /* background-color: #A59E8C; */
 
   }
