--- a/mi-aplicacion/src/index.css
+++ b/mi-aplicacion/src/index.css
@@ -52,6 +52,11 @@ body {
 :root {
   --corporative-color: #18243A;
   --corporative-transparent-color: #18243ace;
+
+  /* --corporative-color: #113247;
+  --corporative-transparent-color: #113247b9; */
+
+
   --light-color: #F1F1ED;
   --light-transparent-color: #f1f1edc7;
   --light-transparent-gradient: linear-gradient(to top, rgba(243, 241, 233, 0.8), rgba(243, 241, 233, 0));
