--- a/mi-aplicacion/src/pages/LandingPage/components/CarouselLocation.css
+++ b/mi-aplicacion/src/pages/LandingPage/components/CarouselLocation.css
@@ -38,12 +38,13 @@
 
 .carousel-content {
   display: flex;
-  gap: 50px;
+  gap: 20px;
+  padding-right: 10px;
 }
 
 .carousel-item {
-  flex: 0 0 calc(20% - 16px);
-  min-width: calc(20% - 16px);
+  flex: 0 0 calc(22% - 16px);
+  min-width: calc(22% - 16px);
 }
 
 .image-container {
