--- a/mi-aplicacion/src/pages/LandingPage/components/Welcome.css
+++ b/mi-aplicacion/src/pages/LandingPage/components/Welcome.css
@@ -1,7 +1,7 @@
 .landing-container {
   background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url('/images/salon.jpg');
   background-size: cover;
-  background-position: center;
+  background-position: center 40%;
   width: 100%;
   height: 100vh; 
   display: flex;
